fix: Left align change password page

--- a/client/components/styles/EditPassword.module.scss
+++ b/client/components/styles/EditPassword.module.scss
@@ -1,8 +1,15 @@
 .edit_container {
-    flex-grow: 1;
-    display: flex;
-    flex-direction: column;
-    padding-bottom: 50px;
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  padding-bottom: 50px;
+  padding-left: 50px;
+}
+
+.pfp_container {
+  display: flex;
+  gap: 24px;
+  margin-top: 24px;
 }
 
 .edit_item {
